--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev-hold": "nodemon lib/server.js  --watch lib  --watch views -e ejs,js",
     "dev_hold2": "nodemon lib/server.js  ",
-    "dev": "nodemon  --exec babel-node  lib/server.js  "
+    "dev": "nodemon  --exec babel-node  lib/server.js  ",
+    "webpack": "webpack -wd"
   },
   "babel": {
     "presets": [
@@ -28,14 +29,20 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "7",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "ejs": "^3.1.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "webpack": "^4.43.0"
   }
 }
