--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Homework",
+  "name": "homework",
   "version": "1.0.0",
   "description": "Advanced React",
   "main": "lib/server.js",
