--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest": "20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1",
     "webpack": "^4.43.0"
   }
 }
