--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "jest": "20",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-test-renderer": "^16.13.1",
