--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-loader": "7",
     "babel-polyfill": "^6.26.0",
