--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "babel-eslint": "^10.1.0",
+    "enzyme": "3.0",
+    "enzyme-adapter-react-16.3": "^1.7.2",
     "eslint": "^7.5.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
@@ -31,6 +33,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-standard": "^4.0.1",
+    "import": "^0.0.6",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
@@ -43,7 +46,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "jest": "20",
+    "jest": "^20.0.4",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
