--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "jest": "^20.0.4",
+    "lodash.debounce": "^4.0.8",
+    "lodash.pickby": "^4.6.0",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
