--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^10.4.7",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "babel-eslint": "^10.1.0",
