--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "babel-eslint": "^10.1.0",
-    "enzyme": "3.0",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16.3": "^1.7.2",
     "eslint": "^7.5.0",
     "eslint-config-standard": "^14.1.1",
@@ -36,6 +36,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-standard": "^4.0.1",
     "import": "^0.0.6",
+    "react-addons-test-utils": "^15.6.2",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
